--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Massurio/github.io/cat4lyfe",
+  "homepage": "https://Massurio.github.io/cat4lyfe",
   "name": "cat_shop",
   "version": "0.1.0",
   "private": true,
